--- a/src/main/resources/org/mapstruct/intellij/messages/MapStructBundle.properties
+++ b/src/main/resources/org/mapstruct/intellij/messages/MapStructBundle.properties
@@ -17,3 +17,11 @@ intention.add.unmapped.target.property=Add unmapped target property
 plugin.settings.title=MapStruct
 plugin.settings.quickFix.title=Quick fix properties
 plugin.settings.quickFix.preferSourceBeforeTargetInMapping=Prefer source before target in @Mapping
+########################################################################################################################
+#
+# generate and use map struct mapper method
+#
+########################################################################################################################
+inspection.generate_mapstruct_class_and_use_it.problem.descriptor=[MapStruct] generate mapper class and use mapper method
+inspection.generate_mapstruct_class_and_use_it.problem.quickfix=[MapStruct] generate mapper class and use mapper method
+inspection.generate_mapstruct_class_and_use_it.properties=[MapStruct] generate mapper class and use mapper method
