add map struct mapper generator

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -65,6 +65,7 @@
               implementationClass="org.mapstruct.intellij.inspection.UnmappedTargetPropertiesInspection"/>
 
       <localInspection
+              groupName="MapStruct"
               language="JAVA"
               enabledByDefault="true"
               level="ERROR"
